--- a/SDS_Senior_Project.ipynb
+++ b/SDS_Senior_Project.ipynb
@@ -2168,12 +2168,7 @@
     "\n",
     "left_diff = set(all_ciks[\"CIK\"]).difference(nondup_ciks)\n",
     "print(len(left_diff))\n",
-    "print(difference[500:510])\n",
-    "\n",
-    "# 1072627 is in companyfacts zip\n",
-    "# so is 1073349 and 1075415 and 1075857 and 1077428\n",
-    "\n",
-    "# TO DO: TKTK EXPLAIN THAT KAGGLE DATASET IS IMPERFECT"
+    "print(difference[500:510])"
    ]
   },
   {
@@ -3411,7 +3406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbd6c87e",
+   "id": "404b55b6",
    "metadata": {},
    "source": [
     "### Total ESG score (Yahoo finance-scraped Sustainalytics data)\n",
@@ -3485,7 +3480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebb8426f",
+   "id": "3755d1e9",
    "metadata": {},
    "source": [
     "### Looking at the distribution of E, S and G components\n",
@@ -3526,7 +3521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e164ebd5",
+   "id": "464b0c03",
    "metadata": {},
    "source": [
     "### Looking at the distribution of controversy scores\n",
@@ -3568,7 +3563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abceeefd",
+   "id": "f67b4a85",
    "metadata": {},
    "source": [
     "## B. The predictor variables: What are they? "
@@ -3682,7 +3677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04861e92",
+   "id": "6c6d03de",
    "metadata": {},
    "source": [
     "There's a lot going on that we would like to narrow down, and an easy way to do that is by removing columns that are mostly NAs. We remove the columns that have more than 50 NAs (1/10 of the dataset, approximately): "
@@ -3718,7 +3713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ab1833",
+   "id": "47350154",
    "metadata": {},
    "source": [
     "Now, we have 65 columns left instead of 80. Of particular note are columns mentioned when introducing this dataset that, based on research, could be related pretty strongly to ESG metrics without being explicitly tied to them. All columns are listed below, but of particular interest are:\n",
@@ -3751,7 +3746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23ce664",
+   "id": "31a7409f",
    "metadata": {},
    "source": [
     "### Correlation plot/matrix to see which variables might be good predictors of ESG score\n",
@@ -3803,7 +3798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4986ef4",
+   "id": "735e32ee",
    "metadata": {},
    "source": [
     "### Example of zooming in on correlation between price variance vars\n",
@@ -3814,7 +3809,7 @@
   {
    "cell_type": "code",
    "execution_count": 368,
-   "id": "1952bb75",
+   "id": "3ccdd238",
    "metadata": {},
    "outputs": [
     {
@@ -3845,7 +3840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb52ab91",
+   "id": "57d7ab44",
    "metadata": {},
    "source": [
     "### Correlations with predictor variable (ESG score)\n",
@@ -3856,7 +3851,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "id": "c44014e9",
+   "id": "471d2ec5",
    "metadata": {},
    "outputs": [
     {
@@ -4188,7 +4183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18319a38",
+   "id": "969cb55f",
    "metadata": {},
    "source": [
     "## C. Distributions of predictor variables and looking at/transforming promising ones\n",
@@ -4256,7 +4251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1c67bc1",
+   "id": "d5c8b12c",
    "metadata": {},
    "source": [
     "The above graph looks much better — keeping a note to include log assets in the model.\n",
@@ -4302,7 +4297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41fe18e7",
+   "id": "ae2c1c98",
    "metadata": {},
    "source": [
     "### Common stock value\n",
@@ -4357,7 +4352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6599b9f5",
+   "id": "0d35b182",
    "metadata": {},
    "source": [
     "### Goodwill\n",
@@ -4395,7 +4390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bc0bcb5",
+   "id": "3726ffd2",
    "metadata": {},
    "source": [
     "## D. What companies have high/low ESG scores, anyways?\n",
@@ -4516,7 +4511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "068a300b",
+   "id": "1ee76c1e",
    "metadata": {},
    "source": [
     "### Lowest \n",
@@ -4527,7 +4522,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "da820c1b",
+   "id": "c294b3ef",
    "metadata": {},
    "outputs": [
     {
@@ -4791,7 +4786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "492353e4",
+   "id": "9020d491",
    "metadata": {},
    "source": [
     "### Corrplot for the new data\n",
@@ -4853,7 +4848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56c6e159",
+   "id": "cc304db1",
    "metadata": {},
    "source": [
     "This plot shows us what variables correlate most strongly with total ESG score:"
@@ -4862,7 +4857,7 @@
   {
    "cell_type": "code",
    "execution_count": 441,
-   "id": "8b9f523a",
+   "id": "790f2f23",
    "metadata": {},
    "outputs": [
     {
@@ -4899,7 +4894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f944240a",
+   "id": "d127e30e",
    "metadata": {},
    "source": [
     "### Checking on CurrentStateAndLocalTaxExpenseBenefit since we didn't use it before\n",
@@ -4935,7 +4930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b9a6f4a",
+   "id": "18164e0b",
    "metadata": {},
    "source": [
     "### The model itself\n",
@@ -5249,7 +5244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a034454",
+   "id": "03102c29",
    "metadata": {},
    "source": [
     "### Taking a look at employee and industry variables\n",
@@ -5286,7 +5281,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fb7a5e7b",
+   "id": "c7a914d9",
    "metadata": {},
    "outputs": [
     {
@@ -5344,7 +5339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c29f4af",
+   "id": "d3d38b1d",
    "metadata": {},
    "source": [
     "### Averages by industry\n",
@@ -5355,7 +5350,7 @@
   {
    "cell_type": "code",
    "execution_count": 500,
-   "id": "8ff08592",
+   "id": "8eadd8c4",
    "metadata": {},
    "outputs": [
     {
@@ -5384,7 +5379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c71cad5",
+   "id": "1694518a",
    "metadata": {},
    "source": [
     "And a table showing the mean ESG score of a company in each industry, which confirms our earlier observation that energy/manufacturing companies have the highest ESG scores and tech companies are on the lower end of those scores."
@@ -5393,7 +5388,7 @@
   {
    "cell_type": "code",
    "execution_count": 501,
-   "id": "af94fee3",
+   "id": "1b61f8c1",
    "metadata": {},
    "outputs": [
     {
@@ -5431,7 +5426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a99067b",
+   "id": "ab967d3e",
    "metadata": {},
    "source": [
     "## Model E: With industry data\n",
@@ -5442,7 +5437,7 @@
   {
    "cell_type": "code",
    "execution_count": 505,
-   "id": "6e4f89ef",
+   "id": "20f34e11",
    "metadata": {},
    "outputs": [
     {
@@ -5512,7 +5507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45ee19af",
+   "id": "866fc9e1",
    "metadata": {},
    "source": [
     "### This isn't a lot of industry data though .. let's look at more\n",
@@ -5525,7 +5520,7 @@
   {
    "cell_type": "code",
    "execution_count": 507,
-   "id": "3ffa257a",
+   "id": "507a4c10",
    "metadata": {},
    "outputs": [
     {
@@ -5699,7 +5694,7 @@
   {
    "cell_type": "code",
    "execution_count": 508,
-   "id": "8faf2741",
+   "id": "5ab70d80",
    "metadata": {},
    "outputs": [
     {
@@ -6131,7 +6126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8168d858",
+   "id": "6cf14d9a",
    "metadata": {},
    "source": [
     "## F. Model F: Bringing everything together (industry + other financial metrics)\n",
@@ -6144,7 +6139,7 @@
   {
    "cell_type": "code",
    "execution_count": 509,
-   "id": "5f5d15e8",
+   "id": "0abb8e2d",
    "metadata": {},
    "outputs": [
     {
@@ -6467,7 +6462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bfe15a7",
+   "id": "d318ca60",
    "metadata": {},
    "source": [
     "### Let's see if we can get a better model combining industry with the other stuff:\n",
@@ -6478,7 +6473,7 @@
   {
    "cell_type": "code",
    "execution_count": 512,
-   "id": "d8460c05",
+   "id": "fbf9b68a",
    "metadata": {},
    "outputs": [
     {
@@ -6604,7 +6599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e4c9a13",
+   "id": "9812351e",
    "metadata": {},
    "source": [
     "# III. Trying the model with another ESG rating dataset \n",
@@ -6615,7 +6610,7 @@
   {
    "cell_type": "code",
    "execution_count": 513,
-   "id": "36779efa",
+   "id": "76fd7715",
    "metadata": {},
    "outputs": [
     {
@@ -6822,7 +6817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c9b482",
+   "id": "65c54623",
    "metadata": {},
    "source": [
     "## Testing the model\n",
@@ -6838,7 +6833,7 @@
   {
    "cell_type": "code",
    "execution_count": 517,
-   "id": "8c4bc01e",
+   "id": "ce6bb51a",
    "metadata": {},
    "outputs": [
     {
