--- a/SDS Senior Project Yahoo Sustainability Scores.ipynb
+++ b/SDS Senior Project Yahoo Sustainability Scores.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9ea65fc3",
+   "metadata": {},
+   "source": [
+    "# Code for scraping Yahoo Finance\n",
+    "\n",
+    "This file contains two main chunks of code, one for getting sustainability data from Yahoo Finance, and the other for getting industry and employee count from Yahoo Finance. All relevant files are in the GitHub repository."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8e0dfe30",
@@ -132,21 +142,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "689ff5de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b9ec4ab0",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# opening csv file and setting up fields\n",
+    "# opening csv file and setting up fields with BeautifulSoup\n",
     "csv_file = open(\"/Users/phoebeliu/Documents/SDS_Senior_Project/yahoo_sustainalytics_score.csv\", \"w\")\n",
     "csv_writer = csv.writer(csv_file)\n",
     "csv_writer.writerow(['ticker','total ESG score', 'percentile', \"e_score\", \"s_score\", \"g_score\", \"controversy\"])\n",
@@ -196,7 +198,7 @@
    "id": "66bdafc6",
    "metadata": {},
    "source": [
-    "# Do the same thing but for other macro data (not sustainability-specific)"
+    "# Do the same thing but for the other data (industry/headcount)"
    ]
   },
   {
@@ -264,14 +266,6 @@
     "    turt.foo(row)\n",
     "    time.sleep(2.5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9637329",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -343,7 +337,7 @@
     "    \n",
     "    # panel 1:\n",
     "    if soup.find(\"div\",{\"class\": \"Mb(25px)\"}) is None:\n",
-    "        print(temp_ticker)\n",
+    "        # print(temp_ticker)\n",
     "        continue\n",
     "    datapanel = soup.find(\"div\",{\"class\": \"Mb(25px)\"})\n",
     "\n",
@@ -377,36 +371,6 @@
     "\n",
     "\n",
     "    csv_writer_p.writerow([temp_ticker, sector, industry, n_employees, description])\n",
-    "    \n",
-    "    '''\n",
-    "    datapanel = soup.find(\"div\",{\"class\": \"Pb(20px) Bdbs(s) Bdbw(3px) Bdbc($seperatorColor) smartphone_Pb(10px) smartphone_Px(20px) smartphone_Bdbw(4px) smartphone_Bdbc($seperatorColor)\"})\n",
-    "    if datapanel is not None:\n",
-    "        total_score = datapanel.find(\"div\", {\"class\": \"Fz(36px) Fw(600) D(ib) Mend(5px)\"}).text.lstrip()\n",
-    "        percentile = datapanel.find(\"span\",{\"class\": \"Bdstarts(s) Bdstartw(0.5px) Pstart(10px) Bdc($seperatorColor) Fz(12px) smartphone_Bd(n) Fw(500)\"}).text.lstrip()\n",
-    "\n",
-    "        controversy = soup.find(\"div\",{\"class\": \"D(ib) Fz(36px) Fw(500)\"})\n",
-    "        if controversy is not None:\n",
-    "            controversy = controversy.text.lstrip()\n",
-    "        else:\n",
-    "            controversy = \"\"\n",
-    "        components = datapanel.find_all(\"div\",{\"class\": \"D(ib) Fz(23px) smartphone_Fz(22px) Fw(600)\"})\n",
-    "        if len(components) > 0:\n",
-    "            env_score = components[0].text.lstrip()\n",
-    "            social_score = components[1].text.lstrip()\n",
-    "            governance_score = components[2].text.lstrip()\n",
-    "        else:\n",
-    "            env_score = \"\"\n",
-    "            social_score = \"\"\n",
-    "            governance_score = \"\"\n",
-    "        \n",
-    "        csv_writer.writerow([temp_ticker, total_score, percentile, env_score, social_score, governance_score, controversy])\n",
-    "        # print(total_score, percentile, env_score, controversy)\n",
-    "    else:\n",
-    "        print(temp_ticker)\n",
-    "        print(count)\n",
-    "        count = count+1\n",
-    "    # else don't write the row in the csv\n",
-    "    '''\n",
     "          \n",
     "csv_file_p.close()\n",
     "\n",
